--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ django-ckeditor-5==0.2.10
 djangorestframework==3.14.0
 Pillow==10.1.0
 pytz==2023.3.post1
+djangorestframework-simplejwt==5.3.0
 sqlparse
 typing_extensions
