--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ djangorestframework==3.14.0
 Pillow==10.1.0
 pytz==2023.3.post1
 djangorestframework-simplejwt==5.3.0
+django-rest-swagger==2.2.0
+drf-yasg==1.21.7
 sqlparse
 typing_extensions
